--- a/package.json
+++ b/package.json
@@ -3,10 +3,10 @@
   "version": "0.0.1",
   "peerDependencies": {
     "@angular/common": "^19.1.4",
-    "@angular/core": "^19.1.4"
+    "@angular/core": "^19.1.4",
+    "maplibre-gl": "^5.1.0"
   },
   "dependencies": {
-    "maplibre-gl": "^5.1.0",
     "tslib": "^2.8.1"
   },
   "sideEffects": false,
