--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,9 +3,7 @@
   "compileOnSave": false,
   "compilerOptions": {
     "paths": {
-      "AngularMapLibreGL": [
-        "dist/angular-map-libre-gl"
-      ]
+      "AngularMapLibreGL": ["dist/angular-map-libre-gl"]
     },
     "baseUrl": "./",
     "outDir": "./dist/out-tsc",
@@ -24,10 +22,7 @@
     "target": "ES2022",
     "module": "ES2022",
     "useDefineForClassFields": false,
-    "lib": [
-      "ES2022",
-      "dom"
-    ]
+    "lib": ["ES2022", "dom"]
   },
   "angularCompilerOptions": {
     "enableI18nLegacyMessageIdFormat": false,
