--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "angular-map-libre-gl",
+  "name": "angular-deck.gl-map",
   "version": "0.0.1",
   "peerDependencies": {
     "@angular/common": "^19.1.4",
