--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@deck.gl/core": "^9.1.11",
     "@deck.gl/geo-layers": "^9.1.11",
     "@deck.gl/mesh-layers": "^9.1.11",
+    "@loaders.gl/obj": "^4.3.3",
     "tslib": "^2.8.1"
   },
   "sideEffects": false,
