--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "angular-deck.gl-map",
+  "name": "angular-deck.gl",
   "version": "0.0.1",
   "peerDependencies": {
     "@angular/common": "^19.1.4",
@@ -7,9 +7,9 @@
     "ng-zorro-antd": "^19.0.2"
   },
   "dependencies": {
-    "@deck.gl/core": "^9.1.13",
-    "@deck.gl/geo-layers": "^9.1.13",
-    "@deck.gl/mesh-layers": "^9.1.13",
+    "@deck.gl/core": "^9.1.14",
+    "@deck.gl/geo-layers": "^9.1.14",
+    "@deck.gl/mesh-layers": "^9.1.14",
     "@loaders.gl/obj": "^4.3.4",
     "tslib": "^2.8.1"
   },
