--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,7 +2,7 @@
   "compileOnSave": false,
   "compilerOptions": {
     "paths": {
-      "AngularMapLibreGL": ["dist/angular-deck.gl-map"]
+      "AngularDeckGL": ["dist/angular-deck.gl"]
     },
     "baseUrl": "./",
     "outDir": "./dist/out-tsc",
